--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "5.61.0",
     "@typescript-eslint/parser": "5.61.0",
     "eslint": "8.44.0",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-qwik": "^1.2.6",
     "prettier": "2.8.8",
     "typescript": "5.1.6",
