--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-qwik": "^1.2.6",
     "prettier": "2.8.8",
+    "sass": "^1.64.2",
     "typescript": "5.1.6",
     "undici": "5.22.1",
     "vite": "4.4.0",
