--- a/.prettierignore
+++ b/.prettierignore
@@ -28,9 +28,9 @@ build
 .rollup.cache
 dist
 tsconfig.tsbuildinfo
-vite.config.ts
+# vite.config.ts
 *.spec.tsx
-*.spec.ts
+# *.spec.ts
 .netlify
 pnpm-lock.yaml
 package-lock.json
