--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "engines": {
     "node": ">=15.0.0"
   },
+  "packageManager": "pnpm@8.6.11",
   "private": true,
   "scripts": {
     "build": "qwik build",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.2.6",
     "@builder.io/qwik-city": "^1.2.6",
+    "@playwright/test": "^1.36.2",
     "@types/eslint": "8.40.2",
     "@types/node": "^20.4.0",
     "@typescript-eslint/eslint-plugin": "5.61.0",
@@ -39,5 +41,8 @@
     "vite": "4.4.0",
     "vite-tsconfig-paths": "4.2.0",
     "wrangler": "^3.0.0"
+  },
+  "dependencies": {
+    "@unpic/qwik": "^0.0.25"
   }
 }
