--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "preview": "qwik build preview && vite preview --open",
     "serve": "wrangler pages dev ./dist",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "prepare": "git config core.hookspath .githooks"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.2.6",
@@ -34,8 +35,8 @@
     "eslint": "8.44.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-qwik": "^1.2.6",
+    "lint-staged": "^13.2.3",
     "prettier": "2.8.8",
-    "sass": "^1.64.2",
     "typescript": "5.1.6",
     "undici": "5.22.1",
     "vite": "4.4.0",
